objects/State_Adjustment_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIF_Upcharge__c</fullName>
        <label>CIF Upcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Long Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_State_Adjustment__c</fullName>
        <label>Other State Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Short_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Short Item Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Adjustment_End_Date__c</fullName>
        <label>State Adjustment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Adjustment_Start_Date__c</fullName>
        <label>State Adjustment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Adjustment__c</fullName>
        <label>State Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whse_Upcharge__c</fullName>
        <label>Whse Upcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Upcharge__c</fullName>
        <label>1% Upcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>State Adjustment Reference</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>State Adjustment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Adjustment Reference</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>